--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -198,8 +198,8 @@
           <mat-card-header>
             <mat-card-title>
               <mat-icon mat-list-icon class="icon-position">edit</mat-icon>
-              Quiz Name
-              <p>{{ r.quiz.category.title }} {{ r.quiz.title }}</p>
+              Course Name <br>
+              <label>{{ r.quiz.category.title }}</label>
             </mat-card-title>
           </mat-card-header>
         </mat-card>
