--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -42,8 +42,10 @@
             <span id="marks" *ngFor="let r of reportData">
                 <p>Marks : <span id="marksU">{{r.marks}}/{{ r.quiz.maxMarks}}</span></p>
                 <p> Correct Answers : {{r.marks}}</p>
-                <!-- <p> Correct Answers: {{reportData[0].marks}}</p> -->
-                <p>Attempted questions : {{attempted}}</p>
+                    
+
+                <!-- YOU MAY ADD THIS ATTEMPTED OPTION IN THE BACKEND REPORT CLASS THEN FETCH REPORT AND SHOW ON THE INTERFACE -->
+                <!-- <p>Attempted questions : {{attempted}}</p> -->
             </span>
             <!-- </div> -->
 
