--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -245,8 +245,14 @@
   </div>
   
   <!-- Table Section -->
-  <div *ngIf="reportsData">
-    <table mat-table [dataSource]="reportsData" class="mat-elevation-z8">
+
+  
+  <div *ngIf="reportsData.length>0">
+    <div>
+      &nbsp;&nbsp;<button  mat-flat-button color="accent"   (click)="exportexcel()">Export as Excel </button>
+      
+        </div>
+    <table mat-table  [dataSource]="reportsData"  class="mat-elevation-z8" id="reportdata">
   
       <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef> Index Number</th>
@@ -263,15 +269,17 @@
         <th mat-header-cell *matHeaderCellDef> Marks </th>
         <td mat-cell *matCellDef="let element">{{ element.marks }}</td>
       </ng-container>
+
+     
   
       <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
       <tr mat-row *matRowDef="let row; columns: displayColumn;"></tr>
   
     </table>
-  
-    <div class="container text-center" *ngIf="reportsData.length == 0">
-      <h1>No Results Summary for this quiz</h1>
-    </div>
+  </div>
+
+  <div class="container text-center" *ngIf="reportsData.length == 0">
+    <h1>Select Course and quiz to load results here</h1>
   </div>
   
 
@@ -380,7 +388,7 @@
 
                 </mat-card-content>
                <mat-card-actions>
-                <button mat-flat-button color="accent"  >Load Data</button>           
+                <button mat-flat-button color="accent">Load Data</button>           
             
                </mat-card-actions>
             </mat-card>
