--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -74,9 +74,9 @@
 
         </div>
 
-{{cateGory|json}}
+ <!-- {{cateGory|json}}  -->
 
-{{associatedQuizzes| json}}
+<!-- {{associatedQuizzes| json}} -->
 
 
 
@@ -85,31 +85,6 @@
         </div>
 
         <h1 class="text-center"><i>{{ getFormmatedTime() }} </i></h1>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <!-- QUIZ STATISTICS -->
         <mat-card class="mt20">
@@ -128,26 +103,7 @@
                     <mat-card-content align="right">
                         <mat-form-field>
                             <mat-label>Select  Course</mat-label>
-                            <!-- <mat-select name="category" [(ngModel)] = "quizData.category.cid"> -->
-                            <!-- <mat-select name="category" [(ngModel)]="qId">
-                                <mat-option *ngFor="let c of allReportData" [value]="c.quiz.qId">
-                                    {{c.quiz.category.title}}
-                                </mat-option>
-                            </mat-select> -->
-
-
-
-                            <!-- <mat-select name="category" [(ngModel)]="qId">
-                              <mat-option *ngFor="let c of categories" [value]="c.id">
-                                  {{c.title}}
-                              </mat-option>
-                          </mat-select> -->
-
-                            <!-- <mat-select>
-                              <mat-option value="option">Data Science</mat-option>
-                              <mat-option value="option">AI</mat-option>
-                              <mat-option value="option">Cybersecurity</mat-option>
-                            </mat-select> -->
+                         
 
                              <mat-select name="category" [(ngModel)]="selectedCategoryId" (selectionChange)="selectCategory(selectedCategoryId)">
                               <mat-option *ngFor="let c of cateGory" [value]="c.cid">
@@ -164,11 +120,6 @@
                             <mat-form-field>
                                 <mat-label>Select  Quiz</mat-label>
 
-                                <!-- <mat-select name="category" [(ngModel)]="qId" (selectionChange)="onQuizOptionSelected()"  >
-                                    <mat-option *ngFor="let r of quizzes" [value]="r.Qid">
-                                        {{r.qTitle}}
-                                    </mat-option>
-                                </mat-select> -->
 
 
                                 <mat-select name="category" [(ngModel)]="qId" (selectionChange)="onQuizOptionSelected()"  >
@@ -284,46 +235,6 @@
   <div class="container text-center" *ngIf="reportsData.length == 0">
     <h1>Select Course and quiz to load results here</h1>
   </div>
-  
-
-   
-      
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
 
     <div class="row">
         <div class="col-md-4">
@@ -367,27 +278,7 @@
                             <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
                           </mat-date-range-picker-actions>
                         </mat-date-range-picker>
-                      </mat-form-field>
-                      
-
-                    <!-- <mat-form-field>
-                        <mat-label>Start Date</mat-label>
-                        <input matInput [matDatepicker]="picker">
-                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-
-
-                      <mat-form-field>
-                        <mat-label>End Date</mat-label>
-                        <input matInput [matDatepicker]="end">
-                        <mat-datepicker-toggle matIconSuffix [for]="end"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>  -->
-                      
-
-
-
+                      </mat-form-field>          
 
                 </mat-card-content>
                <mat-card-actions>
@@ -402,12 +293,7 @@
             <mat-card class="mt20">
               
                 <mat-card-content>
-                    <!-- <p>New Participants today</p>
-                </mat-card-content>
-               <mat-card-actions>
-                <button 
-                 mat-flat-button color="accent"  >Questions</button>           
-               </mat-card-actions> -->
+                
                <div>
                 <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
             </div> 
@@ -421,10 +307,7 @@
     </div>
 
 
-    <!-- <div *ngIf="reportsData">
-        Display fetched data here
-        {{allQuizzes | json}}
-      </div> -->
+
 
 
 
