--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,5 @@ text="Loading information!"
 <!-- dynamic content -->
 <router-outlet></router-outlet>
 <!-- </div> -->
+
+<app-footer></app-footer>
