--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,37 @@
-<p>footer works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container-fluid">
+        <div class="navbar">
+
+            <mat-toolbar color="primary">
+                <div class="row">
+                    <div class="col-md-2">
+
+                        <a mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+                            <p>&#169; ACT</p> 
+                        </a>
+
+                    </div>
+
+
+                    <!-- <div class="col-md-8" id="second">
+                        <a mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+                            href="mailto:immanuelderry32@gmail.com">
+                            Contact via email
+                            <mat-icon>menu_book</mat-icon>
+                        </a>
+
+                    </div>
+
+
+                    <div class="col-md-2">
+                        <p>Contact immanuelderry32@gmail.com</p> 
+                        <p><a>facebook @ ATC</a></p>
+                    </div> -->
+
+                </div>
+
+            </mat-toolbar>
+
+        </div>
+    </div>
+</div>
