questions upload working

--- a/src/app/pages/admin/add-question/add-question.component.html
+++ b/src/app/pages/admin/add-question/add-question.component.html
@@ -95,6 +95,14 @@
                                     <button mat-raised-button color="accent">Add</button>
                                    </div>
                     </form>
+
+
+                    <!-- <form> -->
+                    <input type="file" (change)="onFileSelected($event)">
+                    <button mat-raised-button color="accent" (click)="uploadQuiz()">Upload Questions</button>
+
+                <!-- </form> -->
+
                 </mat-card-content>
 
                
