--- a/src/app/pages/admin/add-question/add-question.component.html
+++ b/src/app/pages/admin/add-question/add-question.component.html
@@ -95,11 +95,25 @@
                                     <button mat-raised-button color="accent">Add</button>
                                    </div>
                     </form>
+                    <label>Upload Questions Instead!   <button  mat-button color="primary" 
+                        matTooltip='The acccepted quiz format is JSON'
+                        >
+        See Acccepted Format
+                        </button>
+            </label>
+              
 
+                    <mat-divider></mat-divider>
 
                     <!-- <form> -->
-                    <input type="file" (change)="onFileSelected($event)">
-                    <button mat-raised-button color="accent" (click)="uploadQuiz()">Upload Questions</button>
+                    <!-- <input type="file" (change)="onFileSelected($event)"> -->
+                    <label class="file-input-label">
+                        <input type="file" (change)="onFileSelected($event)" class="file-input">
+                        <span class="file-input-text">Select questions</span>
+                      </label>
+                      
+
+                    <button class="upload-btn" mat-raised-button color="accent" (click)="uploadQuiz()">Upload </button>
 
                 <!-- </form> -->
 
