redirect to dashboard after clicking browser button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       <mat-icon>menu_book</mat-icon>
     </a>
 
-    <span >Exam Portal </span>
+    <span class="book">Exam Portal </span>
     <span class="example-spacer"></span>
 
 
@@ -47,9 +47,9 @@
  <!-- <div *ngIf="expirationSeconds">
         Token will expire in {{ expirationSeconds }} seconds.
       </div> -->
-<div  *ngIf="isloggedIn && user">
+<!-- <div  *ngIf="isloggedIn && user">
   <h3 class="text-center">Token will expire in <i>{{ getFormmatedTime() }} </i></h3>
-</div>
+</div> -->
 
 
 
