--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -7,3 +7,41 @@
 .incorrect{
     color: red;
 }
+
+.small-devices{
+    display: none;
+}
+
+.instructions{
+    margin-top: 70px;
+}
+
+/* Responsive styles for smaller screens */
+@media (max-width: 600px) {
+    .small-devices{
+        display: inline;
+        }
+    .large-devices{
+        display: none;
+    }
+    .cards{
+position: relative;
+height: 50%;
+width: auto;
+font-size: 15px;
+    }
+    .spin{
+        height: 10px;
+        width: 10px;
+    }
+
+
+    .book{
+        display: none;
+    }
+
+    .hideInstruct{
+        display: none;
+    }
+   
+  }
