--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -1,6 +1,16 @@
 <!-- {{questions[0].quiz|json}} -->
 <!-- {{questions[0].quiz.category.title |json}}
 {{questions[0].quiz.maxMarks |json}} -->
+<ngx-ui-loader
+fgsColor="#ff4081"
+pbColor="#ff4081"
+textColor="#ff4081"
+pbThickness="6"
+text="Preparing results please wait...!"
+></ngx-ui-loader>
+
+
+<div ngxUiLoaderBlurred (blur)="10">
 
 
 
