--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,8 +34,27 @@
                         type="password" matInput placeholder="Password"/>
                       </mat-form-field>
                     </mat-card-content>
-                    <button type="submit" class="button-flex" mat-raised-button color="primary">Login</button>
+
+
+                    <button type="submit"  [disabled]="isLogingIn" class="button-flex" mat-raised-button color="primary">
+                      <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinningCircle.gif">
+                      
+                      Login</button>
               </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
              <mat-card-actions>
               <div class="button-flex-container"> 
                 <!-- <button mat-button color="primary" (click)="Openpopup()" class="" >Forgotten Password?</button> -->
