--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -14,6 +14,7 @@
 
 .full-width{
     align-content: center;
+
 }
 
 
@@ -22,4 +23,21 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+  }
+
+  .spinner{
+    /* display: inline-flex; */
+    position: absolute;
+    /* width: 100%; */
+    /* justify-content: flex-end; */
+    border-radius: 50%; 
+  width: 30px; 
+  height: 30px; 
+  margin-top:-5px ; 
+  margin-left: -33px;
+  
+  }
+  .btn-block{
+    width: 30%;
+
   }
