--- a/src/app/pages/user/sidebar/sidebar.component.html
+++ b/src/app/pages/user/sidebar/sidebar.component.html
@@ -1,13 +1,22 @@
 <mat-card>
     <mat-action-list>
-<div mat-subheader>Available Courses</div>
+<div mat-subheader>Info Section</div>
 
-<button mat-list-item  mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;All Quizzes</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/register-courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/courses-registered"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Courses</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/quizzes"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Quizzes</button>
+<!-- <button mat-list-item  mat-list-item routerLink="/user-dashboard/register-courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button> -->
 
-<button [routerLink]="'/user-dashboard/' +c.cid " mat-list-item *ngFor="let c of categories"> 
+
+
+<!-- <button mat-list-item  mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;All Quizzes</button> -->
+
+
+
+
+<!-- <button [routerLink]="'/user-dashboard/' +c.cid " mat-list-item *ngFor="let c of categories"> 
      <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;{{c.title}}
-</button>
-
+</button> -->
 
     </mat-action-list>
 </mat-card>
