--- a/src/app/pages/admin/update-category/update-category.component.html
+++ b/src/app/pages/admin/update-category/update-category.component.html
@@ -3,31 +3,32 @@
 
     <!-- {{category | json}} -->
     <mat-card-content>
-    <div class="bootstrap-wrapper">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <form *ngIf="category" (ngSubmit)="updateCategoryData()">                
-                    
-                    <mat-label>Title</mat-label>
+        <div class="bootstrap-wrapper">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <form *ngIf="category" (ngSubmit)="updateCategoryData()">
 
-                    <mat-form-field class ="w100" appearance="outline">
+                        <mat-label>Course Title:</mat-label>
+                        <mat-form-field class="w100" appearance="outline">
+                            <input [(ngModel)]="category.title" type="text" name="title" matInput>
+                        </mat-form-field>
 
-                    <input   [(ngModel)] = "category.title"  type="text" name="title" matInput>
-                    </mat-form-field>
-                    <mat-label>Description</mat-label>
+                        <mat-label>Course Code:</mat-label>
+                        <mat-form-field class="w100" appearance="outline">
+                            <input [(ngModel)]="category.courseCode" type="text" name="courseCode" matInput>
+                        </mat-form-field>
 
-                    <mat-form-field class ="w100" appearance="outline">
-                    
-                        <textarea     [(ngModel)] = "category.description" rows="10" name="description" matInput>
-
+                        <mat-label>Description</mat-label>
+                        <mat-form-field class="w100" appearance="outline">
+                            <textarea [(ngModel)]="category.description" rows="10" name="description" matInput>
                         </textarea>
                         </mat-form-field>
-<div class="container text-center mt15">
-    <button mat-raised-button color="accent" type="submit">Update</button>
-</div>
+                        <div class="container text-center mt15">
+                            <button mat-raised-button color="accent" type="submit">Update</button>
+                        </div>
                     </form>
+                </div>
             </div>
         </div>
-    </div>
     </mat-card-content>
 </mat-card>
