--- a/src/app/pages/user/sidebar/sidebar.component.html
+++ b/src/app/pages/user/sidebar/sidebar.component.html
@@ -2,8 +2,9 @@
     <mat-action-list>
 <div mat-subheader>Info Section</div>
 
-<button mat-list-item  mat-list-item routerLink="/user-dashboard/register-courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button>
-<button mat-list-item  mat-list-item routerLink="/user-dashboard/courses-registered"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Courses</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp; Home</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/register"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button>
+<button mat-list-item  mat-list-item routerLink="/user-dashboard/courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Courses</button>
 <button mat-list-item  mat-list-item routerLink="/user-dashboard/quizzes"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Available Quizzes</button>
 <!-- <button mat-list-item  mat-list-item routerLink="/user-dashboard/register-courses"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button> -->
 
