--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,7 +22,7 @@
                         name="username"
                         required
                         type="text"
-                        matInput placeholder="User Name">
+                        matInput placeholder="Username">
                       </mat-form-field>
                       <br/>
                       <mat-form-field>
